# csc299-project

./: .gitignore  SUMMARY.md  video.txt
Final_Project/: DISTRIBUTION_README.md  INSTALL.bat  INSTALLATION_GUIDE.md  QUICK_START.md  check_db.py  convert_icon.py  create_package.ps1  gui.py  install.ps1  main.py  say.ps1  say_app.py  setup.ps1  test_stride_sync.py
Final_Project/scripts/: import_icon.ps1
Final_Project/task_manager/: ai.py  db.py
Final_Project/tests/: test_db_edgecases.py
tasks1/: README.md  task_manager.py  tasks.json
tasks2/: README.md  pyproject.toml  task_manager.py
tasks3/: README.md  pyproject.toml
tasks3/src/: __init__.py
tasks3/tests/: test_inc.py  test_tasks.py
tasks4/: README.md  pyproject.toml
tasks4/src/: __init__.py
tasks5/: CHECKLIST.md  DIAGRAMS.md  INDEX.md  README.md  SPEC-KIT.md  SUMMARY.md  WORKFLOW.md  video.txt
tasks5/.github/agents/: copilot-instructions.md
tasks5/.specify/memory/: constitution.md
tasks5/TaskManager/: README.md  README_ICONS.md  create_shortcut.ps1  main.py  pyproject.toml  requirements.txt  tasks.db  test_db_operations.py
tasks5/TaskManager/task_manager/: __init__.py  cli.py  db.py  models.py
tasks5/TaskManager/tests/: test_cli.py  test_cli_edgecases.py  test_db.py  test_parser.py  test_shell.py
tasks5/specs/001-task-manager/: data-model.md  plan.md  spec.md  tasks.md
